force-app/main/default/objects/Case_Presence_Counter__c/Case_Presence_Counter__c.object-meta.xml
<CustomObject>
    <label>Case Presence Counter</label>
    <pluralLabel>Case Presence Counters</pluralLabel>
    <nameField>
        <label>Counter Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks aggregate statistics for Case Presence usage</description>
</CustomObject>