force-app/main/default/objects/Case_Presence_Counter__c/fields/Draft_Check_Count__c.field-meta.xml
<CustomField>
    <fullName>Draft_Check_Count__c</fullName>
    <label>Draft Check Count</label>
    <description>Total number of draft checks performed across all users</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>