force-app/main/default/objects/Case_Presence_Counter__c/fields/Heartbeat_Count__c.field-meta.xml
<CustomField>
    <fullName>Heartbeat_Count__c</fullName>
    <label>Heartbeat Count</label>
    <description>Total number of heartbeats sent across all users</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>