force-app/main/default/objects/Case_Presence_Counter__c/fields/Last_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reset_Date__c</fullName>
    <label>Last Reset Date</label>
    <description>Date when counters were last reset</description>
    <type>DateTime</type>
</CustomField>