force-app/main/default/objects/Case_Presence_Counter__c/fields/Total_API_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_API_Calls__c</fullName>
    <label>Total API Calls</label>
    <description>Sum of heartbeats and draft checks</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <formula>Heartbeat_Count__c + Draft_Check_Count__c</formula>
</CustomField>